Fix grid alignment

--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,6 @@ input {
     border: none;
     margin: 3px;
     border-radius: 5px;
-    padding: 0px 10px;
     text-align: center;
     box-sizing: border-box;
 }
@@ -43,7 +42,7 @@ input[type='number'] {
 }
 
 input:focus {
-    box-shadow: 0 0 7px;
+    box-shadow: inset 0 0 7px var(--input-text-gray);
     border-radius: 5px;
     outline: none;
 }
